# SpaceCraft-Uplink-Downlink

./: Buffer.cpp  Buffer.h  CMakeLists.txt  CheckBufferStatus.cpp  CheckBufferStatus.h  CheckConnectionWithGround.cpp  ConnectionChecker.cpp  README.md  Send_Route_Ground.cpp  Send_Route_Ground.h  Send_Route_SpaceCraft.cpp  Send_Route_SpaceCraft.h  Source.cpp  Verify_Path.cpp  Verify_Path.h  curlver.h  internalCounter.cpp  internalCounter.h  ipconfig.txt  readFromFile.cpp  readFromFile.h
